Alpha 2.0 (Gabriele Giuseppini) - Changes:
 - Quite faster (on my single-core laptop: doubled from 7fps to 15fps)
 - Sounds and music (on cue)
 - Textures for ships, land, water, and clouds in the sky
 - More realistic ropes
 - More realistic water dynamics
 - When a ship breaks apart, the broken pieces now hide each other correctly
 - Faster smash tool
 - The strength of the smash and grab tools depends on how long the mouse button is kept pressed for
 - Added menu and keyboard shortcuts (+/-) for zoom
 - Revamped settings window
 - Added application icon and cursors 

Alpha 1.3 - Changes:
 - Stress markers are visible through panels
 - Added x-ray mode
 - Uneven ocean floor (not yet editable, but physics are working)
 - Multithreaded simulation: should run much faster on multicore processors
 - Fixed the "jelly bug" - simulation is much more stable (still issues with spheres)
 - Fixed bug where program would fail to close when a large ship was loaded
 - Added option (Ctrl+R) to reload last ship

Alpha 1.2 - Changes:
 - Materials system with customizable materials (data/materials.json)
 - New materials (+ new colour codes)
 - Improved physics/stiffness
 - Improved graphics (solid panels)
 - Fixed crashing and physics issues associated with smash tool
 - *Temporary fix* for non-transparent water (see settings dialog)

Alpha 1.1 - Changes:
 - Added Grab tool
 - Pressure increases with depth
 - Water can flow both in and out of hull breaches
 - Improved fluid dynamics

Alpha 1.0 - Changes:
 - Hull material is not self-buoyant (need air pockets for buoyancy)
 - Hull material is heavier, slightly stronger
 - Exposed white areas flood more quickly
 - Gaps in hull material leak automatically, without anything breaking
 - Different materials - Steel, wood, etc. (different strengths, colours)
 - Can destroy ships with mouse (interactive!)
 - Fixed crashing issue (was some bad memory access, fixed up the order of things now)