@@ -31,8 +31,6 @@ set  (GAME_SOURCES
 	RenderTypes.h
 	ResourceLoader.cpp
 	ResourceLoader.h
-	Scheduler.cpp
-	Scheduler.h
 	ShipDefinition.h
 	ShipDefinitionFile.cpp
 	ShipDefinitionFile.h
